--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,11 +27,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".MenuActivity" />
-        <activity android:name=".PelotasActivity" />
-        <activity android:name=".LevelsActivity" />
-        <activity android:name=".OpsActivity"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".MenuActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".PelotasActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".LevelsActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".OpsActivity"
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
